--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -508,6 +508,9 @@
                     <li class="nav-item"><a class="nav-link-neon" href="conversor_binario_hexadecimal.html">Conversor</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="MySQL.html">MySQL</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html">DHCP/DNS</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html">Lenguajes</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html">CSS Básico</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="javascript_universitario.html">JavaScript</a></li>
                     <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><i class="bi bi-palette-fill"></i></button></li>
                 </ul>
             </div>
@@ -569,6 +572,30 @@
                     <a href="dhcp_dns.html" class="btn btn-outline-primary mt-3">Acceder</a>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 p-4 text-center">
+                    <i class="bi bi-code-square fs-1"></i>
+                    <h3 class="mt-3">Lenguajes</h3>
+                    <p>XML, HTML, XSD, XPath, XQuery y más.</p>
+                    <a href="lenguajes_de_marcas.html" class="btn btn-outline-primary mt-3">Acceder</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 p-4 text-center">
+                    <i class="bi bi-filetype-css fs-1"></i>
+                    <h3 class="mt-3">CSS Básico</h3>
+                    <p>Cascada, especificidad, Grid/Flex y arquitectura de estilos.</p>
+                    <a href="Css_basico.html" class="btn btn-outline-primary mt-3">Acceder</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 p-4 text-center">
+                    <i class="bi bi-filetype-js fs-1"></i>
+                    <h3 class="mt-3">JavaScript</h3>
+                    <p>Event loop, asincronía, modularidad y laboratorio práctico.</p>
+                    <a href="javascript_universitario.html" class="btn btn-outline-primary mt-3">Acceder</a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -578,29 +605,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Temas del navbar (mismo código que tenías)
-        const themes = ['rainbow', 'cyberpunk', 'synthwave', 'holographic', 'plasma'];
-        let currentTheme = localStorage.getItem('navbarTheme') || 'rainbow';
-        const navbar = document.querySelector('.navbar-neon');
-        const themeBtn = document.getElementById('themeToggle');
-
-        function applyTheme(theme) {
-            navbar.className = 'navbar-neon navbar navbar-expand-lg sticky-top';
-            if (theme !== 'rainbow') {
-                navbar.classList.add(`theme-${theme}`);
-            }
-            localStorage.setItem('navbarTheme', theme);
-            currentTheme = theme;
-        }
-
-        function nextTheme() {
-            const currentIndex = themes.indexOf(currentTheme);
-            const nextIndex = (currentIndex + 1) % themes.length;
-            applyTheme(themes[nextIndex]);
-        }
-
-        themeBtn.addEventListener('click', nextTheme);
-        applyTheme(currentTheme);
 
         // Ocultar la animación de Mr. Robot después de 15 segundos
         const robot = document.getElementById('mr-robot-glitch');
@@ -610,5 +614,12 @@
             });
         }
     </script>
+    <script src="assets/js/site-theme.js"></script>
 </body>
 </html>
+
+
+
+
+
+
