--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
     <div class="container py-5">
         <div class="hero text-center mb-5">
             <h1 class="display-4 fw-bold"><i class="bi bi-book"></i> SOURCE-IT My path by Jemarin</h1>
-            <p class="lead">Recursos para enfermos de informatica.</p>
+            <p class="lead">Recursos para enfermos de informatica, mi refrescoria.</p>
         </div>
 
         <div class="row g-4">
